--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
