ユーザアイコン及びポップアップのUIを自然なカードスタイルに整形

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "maplibre-gl": "^5.9.0",
