--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "lucide-react": "^0.546.0",
     "maplibre-gl": "^5.9.0",
     "next": "15.5.4",
     "react": "19.1.0",
